# sprint5_1

./: INICIO_RAPIDO.md  README.md  package.xml  setup.cfg  setup.py
config/: aruco_nav_params.yaml  install.sh
launch/: aruco_navigation_launch.py
sprint5_v2/: aruco_navigator.py  calibration_helper.py  subcriptor.py  system_tester.py
