<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sprint5_v2</name>
  <version>0.0.1</version>
  <description>Sistema de navegación autónoma con ArUco markers</description>
  <maintainer email="tu@email.com">Tu Nombre</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependencias de build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
